--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
 }
 
 h1 {
-  color: white;
-  font-size: 72px;
+  color: #f7f7f7;
+  font-size: 64px;
+  font-weight: bolder;
+  font-family: sans-serif;
+  font-style: italic;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 1.4;
 }
